# snatchnet

./: .dockerignore  .gitignore  Dockerfile  fly.toml  netlify.toml  pyproject.toml  run.py
app/: api.py  main.py
netlify/functions/: download.py  info.py
public/: index.html
public/css/: style.css
public/js/: app.js
