[project]
name = "snatchnet"
version = "1.0.0"
description = "Download videos from YouTube, TikTok, Instagram, Snapchat & more"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yt-dlp>=2024.12.13",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
]

[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 3000"

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",
]
